--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header{
     background: white;
+    padding: 20px 30px 10px 30px;
     border-bottom: 2px solid $purple_color;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.19);
 }
 .header__title{
     color: $purple_color;
