--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,5 +1,11 @@
 .dashboard__header{
     background: #f9f6fa;
-    padding: 20px 100px 0px 100px;
     border-bottom: 1px solid $purple_color;
+    padding: 20px 80px 0px 80px;
+}
+
+@media screen and (max-width: 600px) {
+    div.dashboard__header {
+        padding: 20px 5px 0px 5px;
+    }
 }
