--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,4 @@
 @import "./styles/components/dashboard";
 @import "./styles/components/summary-box";
 @import "./styles/components/filter-box";
+@import "./styles/components/form";
