--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,4 @@
 @import "./styles/components/summary-box";
 @import "./styles/components/filter-box";
 @import "./styles/components/form";
+@import "./styles/components/list-wrapper";
