--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,5 +1,5 @@
 .dashboard__header{
-    background: #f9f6fa;
+    background: $light_purple_color;
     border-bottom: 1px solid $purple_color;
     padding: 20px 80px 0px 80px;
 }
