--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,4 @@
 @import "./styles/components/filter-box";
 @import "./styles/components/form";
 @import "./styles/components/list-wrapper";
+@import "./styles/components/loader";
