--- a/src/styles/components/_filter-box.scss
+++ b/src/styles/components/_filter-box.scss
@@ -26,9 +26,21 @@
     border-radius: 4px;
     height: 40px;
     width: 100%;
+    padding-left: 5px;
+}
+.filter-box__category-drop{
+    border: 2px solid $purple_color;
+    background: white;
+    border-radius: 4px;
+    height: 40px;
+    width: 100%;
+    padding-left: 5px;
 }
 .filter-box__date{
     padding-left: 50px;
+}
+.filter-box__category{
+    margin-top: 10px;
 }
 // Phone
 @media screen and (max-width: 600px) {
@@ -42,10 +54,16 @@
         margin-top: 10px;
     }
     .filter-box__drop{
-        width: 80%;
+        width: 100%;
     }
     .filter-box__date{
         margin-top: 13px;
         padding-left: 10px;
+    }
+    .filter-box__category{
+        margin-top: 15px;
+    }
+    .filter-box__category-drop{
+        width: 100%;
     }
 }
