--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -10,14 +10,22 @@
     height: 50px;
     padding-left: 10px;
 }
+.form__category{
+    margin-bottom: 15px;
+    border: 2px solid $purple_color;
+    border-radius: 4px;
+    height: 50px;
+    padding-left: 10px;
+    background: white;
+}
 .form__date{
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     align-self: center;
 }
 .form__textarea{
     margin-bottom: 15px;
+    border: 2px solid $purple_color;
     border-radius: 4px;
-    border-color: $purple_color;
     height: 100px;
     padding-left: 10px;
 }
