--- a/src/styles/components/_filter-box.scss
+++ b/src/styles/components/_filter-box.scss
@@ -57,8 +57,9 @@
         width: 100%;
     }
     .filter-box__date{
+        padding-left: 0px;
         margin-top: 13px;
-        padding-left: 10px;
+        float: right;
     }
     .filter-box__category{
         margin-top: 15px;
